changes to index.html

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flo Electrical | Professional Electrician Services in London</title>
-    <meta name="description" content="Expert electrician services in London with over 30 years of experience. NICEIC registered with comprehensive domestic and commercial electrical solutions." />
-    <meta name="author" content="Flo Electrical" />
+    <title>FRANSSON ELECTRICS | Professional Electrician Services in London</title>
+    <meta name="description" content="Expert electrician services in London with over 10 years of experience. NICEIC registered with comprehensive domestic and commercial electrical solutions." />
+    <meta name="author" content="FRANSSON ELECTRICS" />
 
-    <meta property="og:title" content="Flo Electrical | Professional Electrician Services in London" />
-    <meta property="og:description" content="Expert electrician services in London with over 30 years of experience. NICEIC registered with comprehensive domestic and commercial electrical solutions." />
+    <meta property="og:title" content="FRANSSON ELECTRICS | Professional Electrician Services in London" />
+    <meta property="og:description" content="Expert electrician services in London with over 10 years of experience. NICEIC registered with comprehensive domestic and commercial electrical solutions." />
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@floelectrical" />
+    <meta name="twitter:site" content="@franssonelectrics" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
